# AIlibrary_backend

./: .gitignore  .pdm-python  Dockerfile  Pipfile  api_views_backup.py  db.sqlite3  pyproject.toml  requirements.txt  setup.py  uwsgi.ini
LibraryManagementSystem/: settings.py  urls.py
api/: models.py  serializers.py  urls.py  views.py
api/management/commands/: init_permissions.py  init_whitelist.py  insert_announcements.py  insert_test_data.py
api/migrations/: 0001_initial.py  0002_author_category_book_borrowrecord_recommendation_and_more.py  0003_user_date_of_birth_user_major.py  0004_user_user_type.py  0005_alter_borrowrecord_status_alter_user_date_of_birth.py  0006_alter_rating_options_author_birth_date_and_more.py  0007_remove_author_birth_date_remove_author_country_and_more.py  0008_alter_category_options_remove_author_bio_and_more.py  0009_user_is_active_user_last_login_alter_user_password_and_more.py
api/tests/: postman_collection.json  test_integration.py  test_performance.py  test_units.py
script/: import_ratings.py  practice.py  practice_borrow_record.py  setup_user_permissions.py  test_data.py
utils/: auth.py  cors.py  decorators.py  pagination.py  permissions.py  suanfa.py  tree.py  view.py
